    * FIX: Views: toggling forms does not disable the checkbox button anymore
    * FIX: Dashboard: Fixed wrong display options in links after data reloads
    * FIX: Fixed "remove all downtimes" button in views when no downtimes to be deleted 
    * FIX: Services in hosttables now use the service name as header (if no custom title set)
    
    WATO:
    * FIX: Fixed generated manual check definitions for checks without items
      like ntp_time and tcp_conn_stats
    * FIX: Persisting changing of folder titles when only the title has changed
    * FIX: Fixed rendering bug after folder editing
    * Add: Creating a new rule immediately opens its edit formular
    * The rules formular now uses POST as transaction method
    * Modularized the authentication and user management code
    * Default config: add contact group 'all' and put all hosts into it
    * Reverse order of Condition, Value and General options in rule editor
    * Allowing "%" and "+" in mail prefixes of contacts now

    Event Console:
    * FIX: fix exception in rules that use facility local7
    * FIX: fix event icon in case of using TCP access to EC
    * FIX: Allowing ":" in application field (e.g. needed for windows logfiles)
    * FIX: fix bug in Filter "Hostname/IP-Address of original event"
    * Replication slave can now copy rules from master into local configuration
      via a new button in WATO.
    * Speedup access to event history by earlier filtering and prefiltering with grep
    * New builtin syslog server! Please refer to online docu for details.
    * Icon to events of host links to view that has context button to host
    * FIX: remove event pipe on program shutdown, prevents syslog freeze
    * FIX: hostnames in livestatus query now being utf8 encoded

    Livestatus:
    * FIX: Changed logging output "Time to process request" to be debug output

1.2.1i3:
    Core:
    * added HOST/SERVICEPROBLEMID to notification macros